# flatk

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: chunks_iter.rs  clumped_vs_nested.rs  gpu.rs  isolate_iter_mut.rs  storage.rs  storage_ints.rs  write.rs  zip.rs
examples/: chunked_iter.rs  component.rs  composite_component.rs  composite_entity.rs  deck.rs  entity.rs  gpu_find_optimal_workgroup.rs  sparse.rs
flatk-derive/: Cargo.toml
flatk-derive/src/: component.rs  entity.rs  lib.rs
src/: array.rs  boxed.rs  chunked.rs  gpu.rs  lib.rs  macros.rs  range.rs  select.rs  slice.rs  sparse.rs  subset.rs  tuple.rs  uniform.rs  vec.rs  view.rs  zip.rs
src/chunked/: clumped_offsets.rs  offsets.rs  par_iter.rs  sorted_chunks.rs  sparse.rs  uniform.rs
src/chunked/clumped_offsets/: par_iter.rs
src/chunked/offsets/: par_iter.rs
src/sparse/: par_iter.rs
tests/: atom_iter.rs  chunked.rs  chunked_subset.rs  component.rs  composition.rs  convert.rs  get.rs  nested_chunked.rs  split.rs  subset.rs  unichunked.rs
tests/chunked/: chunked.rs  mod.rs  nested.rs  sparse.rs  subset.rs  unichunked.rs
tests/chunked/chunked/: chunked.rs
tests/subset/: mod.rs
tests/unichunked/: mod.rs  unichunked.rs
