[package]
name = "flatk"
version = "0.4.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

description = "Flat layout abstraction toolkit."
license = "MIT OR Apache-2.0"
readme = "README.md"

homepage = "https://github.com/elrnv/flatk"
repository = "https://github.com/elrnv/flatk"
documentation = "https://docs.rs/flatk"
keywords = ["chunked", "sparse", "component", "structure", "layout"]

[dependencies]
typenum = "1.12.0"
reinterpret = "0.2"
bytemuck = { version = "1.5", features = ["extern_crate_alloc"] }
rayon = { version = "1.5", optional = true }
#wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", optional = true }
#futures = { version = "0.3", optional = true }
#shaderc = { version = "0.6", optional = true }
#glsl = { version = "4.1", optional = true }
flatk-derive = { path = "flatk-derive", version = "0.3", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[features]
default = ["derive", "sparse", "rayon"]
unstable = ["criterion/real_blackbox"]
derive = ["flatk-derive"]
sorted_chunks = []
sparse = []
#gpu = ["wgpu", "futures", "shaderc", "glsl"]

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "storage_ints"
harness = false

[[bench]]
name = "isolate_iter_mut"
harness = false

[[bench]]
name = "chunks_iter"
harness = false

[[bench]]
name = "zip"
harness = false

[[bench]]
name = "gpu"
harness = false
