[package]
name = "flatk-derive"
version = "0.3.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

description = "Derive macros for deriving traits for [flatk](https:://crates.io/crates/flatk)"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/elrnv/flatk-derive"
repository = "https://github.com/elrnv/flatk-derive"
documentation = "https://docs.rs/flatk-derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.0"
lazy_static = "1"
